style/less/responsive.less
// main: build.less

/*
 * medium screens
 */
@media (min-width: 40em) and (max-width: 63.9375em) {
	footer {
		.button.big {
			font-size: 30px;
		}
	}

	textarea {
		height: 33vh;
	}

	.the-studio-intro {
		h1 {
			top: 25vh;
			max-width: 62vw;
		}

		p {
			bottom: 20vh;
			max-width: 45vw;
		}
	}

	.motio-vertical {
		left: 10%;
		top: -69px;
		width: 200px;
		height: 709px;
	}
}

/*
 * small screens
 */
@media (max-width: 39.9375em) {
	body {
		&.has-footer {
			section:last-of-type {
				margin-bottom: 476px;
			}
		}
	}

	header {
		padding: @gutter / 2 @gutter * 1 / 3;
	}

	footer {
		text-align: center;

		.logo, .copyright {
			margin-top: 30px;
		}
	}

	textarea {
		height: 44vh;
	}

	.the-studio-intro {
		h1, p {
			position: relative;
			top: auto;
			bottom: auto;
			max-width: none;
		}
	}

	.wrapper-motio-vertical {
		display: none;
	}

	.menu-trigger {
		left: -100px;
		opacity: 0;

		&:checked {
			~ .menu {
				.transform(translate3d(-100vw, 0, 0));
				.transition(transform 1.4s 250ms @cubic);

				&::before {
					.transform(translate3d(-100vw, 0, 0));
					.transition(transform 2s 150ms @cubic);
				}

				&::after {
					width: 10vw;
					.transition(width 1.4s 250ms @cubic);
				}

				& > li {
					opacity: 1;
					.transition(opacity 800ms 800ms ease);
				}
			}
		}
	}

	.menu-button, .clone .menu-button {
		position: absolute;
		top: 44px;
		right: 30px;
		width: 34px;
		height: 34px;
		cursor: pointer;

		&:hover {
			span {
				.transform(translateX(30%));
			}
		}

		&::before, &::after, span {
			content: '';
			position: absolute;
			display: block;
			height: 4px;
			width: 100%;
			background: @contrast-color;
			cursor: pointer;
		}

		&::before {
			top: 3px;
		}

		&::after {
			bottom: 3px;
		}

		span {
			top: 15px;
			width: 75%;
			.transition(transform 400ms @cubic);
		}
	}

	.menu {
		flex-direction: column;
		position: fixed;
		z-index: 50;
		left: 100vw;
		top: 0;
		width: 100vw;
		height: 100vh;
		margin: 0;
		padding: 10vh 20vw;
		background: @base-color;
		will-change: transform;
		.transition(transform 1.4s 700ms @cubic);

		&::before {
			content: '';
			position: fixed;
			z-index: 1;
			left: 0;
			top: 0;
			width: 100vw;
			height: 100vh;
			background: @contrast-color;
			will-change: transform;
			.transition(transform 2s 600ms @cubic);
		}

		&::after {
			content: '';
			position: fixed;
			z-index: 2;
			left: 0;
			top: 0;
			width: 100vw;
			height: 100vh;
			background: @vibrant-color;
			will-change: width;
			.transition(width 1.4s 700ms @cubic);
		}

		& > li {
			opacity: 0;
			.transition(opacity 400ms 500ms ease);

			&.active::before {
				content: '';
				display: block;
				position: absolute;
				left: -25px;
				top: 48%;
				width: 10px;
				height: 10px;
				background: @vibrant-color;
				.border-radius(100%);
			}
		}

		ul {
			margin: 0;
		}

		li {
			position: relative;
			margin: 0;
			line-height: 2.5;
			font-size: 40px;

			a {
				color: @contrast-color;
			}
		}

		.lang {
			li {
				&:last-child {
					margin-left: 40px;

					&::before {
						color: @contrast-color;
						left: -25px;
					}
				}

				&.active a {
					color: @contrast-color;
				}
			}

			a {
				color: @bright-color;
			}
		}

		.social {
			position: fixed;
			left: 20vw;
			bottom: 5vh;

			li {
				margin-right: 7vw;
			}

			svg {
				width: 40px;
				height: 40px;
			}
		}
	}

	.clone {
		.menu-button {
			&::before, &::after, span {
				background: @base-color;
			}
		}
	}

	.menu-button-close {
		position: fixed;
		top: 44px;
		right: 47px;
		width: 34px;
		height: 34px;
		cursor: pointer;
	}
}

